@@ -66,6 +66,10 @@ bzr 0.1 2005-10-06
     * 'bzr diff -r branch:URL' will now perform a diff between two branches.
       Contributed by Robert Collins.
 
+    * 'bzr log' with the default formatter will show merged revisions,
+      indented to the right. Initial implementation contributed by Gustavo
+      Niemeyer, made incremental by Robert Collins.
+
 
   INTERNALS:
 
